deploy/10-taiga-protected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-protected
  namespace: pbs-taiga
  labels:
    app: taiga-protected
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: taiga-protected
  template:
    metadata:
      labels:
        app: taiga-protected
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - name: taiga-protected
          image: taigaio/taiga-protected:6.10.1@sha256:fd4568a97a59225db90f422594cf0e05010be50c9a2a383c01477c5ee521d393
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: "80Mi"
              cpu: "10m"
            limits:
              memory: "200Mi"
              cpu: "50m"
          readinessProbe:
            tcpSocket:
              port: 8003
          startupProbe:
            tcpSocket:
              port: 8003
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            tcpSocket:
              port: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-protected
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-protected
  ports:
    - port: 8003
      targetPort: 8003
