deploy/11-taiga-async.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: taiga-async-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    matchLabels:
      app: taiga-async-rabbitmq
  serviceName: taiga-async-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: taiga-async-rabbitmq
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - name: taiga-async-rabbitmq
          # do not use version > 4.3, as we rely on deprecated features
          image: rabbitmq:4.3-management-alpine@sha256:3ef7f7e89fed709a78f79b8b5f4e30e1312a1d4089da752e23595566d9d61a95
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "100Mi"
              cpu: "120m"
            limits:
              memory: "250Mi"
              cpu: "250m"
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 60
            # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: taiga-async-rabbitmq
              mountPath: /var/lib/rabbitmq/mnesia
            - name: memory-limit-config
              mountPath: /etc/rabbitmq/conf.d/20-memory-limit.conf
              subPath: 20-memory-limit.conf
            - name: deprecated-features-config
              mountPath: /etc/rabbitmq/conf.d/10-deprecated-features.conf
              subPath: 10-deprecated-features.conf
      volumes:
        - name: taiga-async-rabbitmq
          persistentVolumeClaim:
            claimName: taiga-async-rabbitmq
        - name: memory-limit-config
          configMap:
            name: rabbitmq-memory-limit-config
            items:
              - key: 20-memory-limit.conf
                path: 20-memory-limit.conf
        - name: deprecated-features-config
          configMap:
            name: rabbitmq-deprecated-features-config
            items:
              - key: 10-deprecated-features.conf
                path: 10-deprecated-features.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-async
  namespace: pbs-taiga
  labels:
    app: taiga-async
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: taiga-async
  template:
    metadata:
      labels:
        app: taiga-async
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      affinity:
        podAffinity: # We need to schedule this on the same node as taiga-back because of shared volumes
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - taiga-back
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: taiga-static
          persistentVolumeClaim:
            claimName: taiga-static
        - name: taiga-media
          persistentVolumeClaim:
            claimName: taiga-media
      containers:
        - name: taiga-async
          image: ghcr.io/scout-ch/pbs-taiga-back:latest@sha256:6a1e0701a8fc59dd703e0918faa13652fa53a8f2dc62d11f634281f20a7f70f0
          ports:
            - containerPort: 8000
          command: ["/taiga-back/docker/custom_entrypoint.sh"]
          args:
            [
              "celery",
              "-A",
              "taiga.celery",
              "worker",
              "-B",
              "--concurrency",
              "4",
              "-l",
              "INFO",
            ]
          resources:
            requests:
              memory: "350Mi"
              cpu: "10m"
            limits:
              memory: "500Mi"
              cpu: "50m"
          volumeMounts:
            - name: taiga-static
              mountPath: /taiga-async/static
            - name: taiga-media
              mountPath: /taiga-async/media
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-async-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-async-rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
