deploy/10-taiga-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-back
  namespace: pbs-taiga
  labels:
    app: taiga-back
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: taiga-back
  template:
    metadata:
      labels:
        app: taiga-back
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      volumes:
        - name: taiga-static
          persistentVolumeClaim:
            claimName: taiga-static
        - name: taiga-media
          persistentVolumeClaim:
            claimName: taiga-media
      containers:
        - name: taiga-back
          image: ghcr.io/scout-ch/pbs-taiga-back:latest@sha256:6a1e0701a8fc59dd703e0918faa13652fa53a8f2dc62d11f634281f20a7f70f0
          command: ["/taiga-back/docker/custom_entrypoint.sh"]
          args:
            [
              "gunicorn",
              "taiga.wsgi:application",
              "--name",
              "taiga_api",
              "--bind",
              "0.0.0.0:8000",
              "--workers",
              "3",
              "--worker-tmp-dir",
              "/dev/shm",
              "--log-level=info",
              "--access-logfile",
              "-",
            ]
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "300Mi"
              cpu: "10m"
            limits:
              memory: "500Mi"
              cpu: "250m"
          volumeMounts:
            - name: taiga-static
              mountPath: /taiga-back/static
            - name: taiga-media
              mountPath: /taiga-back/media
          readinessProbe:
            httpGet:
              path: /api/v1/
              port: 8000
          startupProbe:
            httpGet:
              path: /api/v1/
              port: 8000
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /api/v1/
              port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-back
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-back
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-back
  namespace: pbs-taiga
  labels:
    app: taiga-back
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: taiga.scout.ch
      http:
        paths:
          - pathType: Prefix
            path: "/admin"
            backend:
              service:
                name: taiga-back
                port:
                  number: 8000
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: taiga-back
                port:
                  number: 8000
  tls:
    - hosts:
        - taiga.scout.ch
      secretName: tls-cert
