deploy/10-taiga-events.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: taiga-events-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    matchLabels:
      app: taiga-events-rabbitmq
  serviceName: taiga-events-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: taiga-events-rabbitmq
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - name: taiga-events-rabbitmq
          # Can't update post 4.1.0 because of breaking changes:
          # https://github.com/rabbitmq/rabbitmq-server/blob/main/release-notes/4.1.0.md#initial-amqp-0-9-1-maximum-frame-size
          image: rabbitmq:4.0.9-management-alpine@sha256:06030d9cf3970e475f3cd85ae6762ef48c930b3de8344c0d2983b519a18ad261
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "100Mi"
              cpu: "120m"
            limits:
              memory: "250Mi"
              cpu: "250m"
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 60
            # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: taiga-events-rabbitmq
              mountPath: /var/lib/rabbitmq/mnesia
            - name: memory-limit-config
              mountPath: /etc/rabbitmq/conf.d/20-memory-limit.conf
              subPath: 20-memory-limit.conf
      volumes:
        - name: taiga-events-rabbitmq
          persistentVolumeClaim:
            claimName: taiga-events-rabbitmq
        - name: memory-limit-config
          configMap:
            name: rabbitmq-memory-limit-config
            items:
              - key: 20-memory-limit.conf
                path: 20-memory-limit.conf
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-events-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-events-rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events
  namespace: pbs-taiga
  labels:
    app: taiga-events
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: taiga-events
  template:
    metadata:
      labels:
        app: taiga-events
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - name: taiga-events
          image: taigaio/taiga-events:6.10.0@sha256:92fc0822564f891700d74d23fa44951adf2845cf50c9e56bfd0ef29abdc1ab40
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "65Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3023
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3023
          startupProbe:
            httpGet:
              path: /healthz
              port: 3023
            periodSeconds: 1
            failureThreshold: 60
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-events
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-events
  ports:
    - port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-events
  namespace: pbs-taiga
  labels:
    app: taiga-events
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: taiga.scout.ch
      http:
        paths:
          - pathType: Prefix
            path: "/events"
            backend:
              service:
                name: taiga-events
                port:
                  number: 8888
  tls:
    - hosts:
        - taiga.scout.ch
      secretName: tls-cert
