deploy/10-taiga-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-front
  namespace: pbs-taiga
  labels:
    app: taiga-front
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: taiga-front
  template:
    metadata:
      labels:
        app: taiga-front
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      containers:
        - name: taiga-front
          image: ghcr.io/scout-ch/pbs-taiga-front:latest@sha256:674d48b2798dece2c46cb7661c4730095f6109b1b94180a2d11ddd720e49f315
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "5Mi"
              cpu: "10m"
            limits:
              memory: "50Mi"
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-front
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-front
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-front
  namespace: pbs-taiga
  labels:
    app: taiga-front
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: taiga.scout.ch
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: taiga-front
                port:
                  number: 80
  tls:
    - hosts:
        - taiga.scout.ch
      secretName: tls-cert
