deploy/11-taiga-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-gateway
  namespace: pbs-taiga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-gateway
  template:
    metadata:
      labels:
        app: taiga-gateway
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-2tvwejg-pne
      affinity:
        podAffinity: # We need to schedule this on the same node as taiga-back because of shared volumes
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - taiga-back
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: taiga-gateway
          image: nginx:1.31-alpine@sha256:df221db836e1754089190208cee7eeda94f233197056426eda74a43ab1abeac2
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "5Mi"
              cpu: "10m"
            limits:
              memory: "50Mi"
              cpu: "50m"
          volumeMounts:
            - name: taiga-gateway-config
              mountPath: /etc/nginx/conf.d/
              readOnly: true
            - name: taiga-static
              mountPath: /taiga/static
            - name: taiga-media
              mountPath: /taiga/media
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
      volumes:
        - name: taiga-gateway-config
          configMap:
            name: taiga-gateway-config
        - name: taiga-static
          persistentVolumeClaim:
            claimName: taiga-static
        - name: taiga-media
          persistentVolumeClaim:
            claimName: taiga-media
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-gateway
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-gateway
  namespace: pbs-taiga
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: taiga.scout.ch
      http:
        paths:
          - pathType: Prefix
            path: "/static"
            backend:
              service:
                name: taiga-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/media"
            backend:
              service:
                name: taiga-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - taiga.scout.ch
      secretName: tls-cert
